client/src/components/Admin/MySettings/styles.css
.settings {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  gap: 20px;
}

.settingsSection {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;

  box-sizing: border-box;
  width: 800px;
  max-width: 90vw;

  margin: auto;
  padding: 20px;

  background: linear-gradient(
    var(--card-angle),
    var(--card-color1) 0%,
    var(--card-color2) 100%
  );
  background-position: center;
  border-radius: 10px;
}

.settingsName {
  font-size: 25px;
  margin-bottom: 15px;
}

.settingsH {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;

  width: 100%;
  gap: 20px;
}

.settingsV {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;

  gap: 30px;

  margin-bottom: 50px;
}

.settingsButton {
  width: 250px;
  max-width: 90%;
  height: 40px;
  border-radius: 10px;

  background-color: var(--button-color);

  text-align: center;
  line-height: 40px;

  font-size: 20px;
  font-weight: 500;
  color: var(--social-color);

  cursor: pointer;
}

.settingsButton:hover {
  filter: brightness(110%);
}

.settingsButton:active {
  filter: brightness(90%);
}

.settingsButtonRed {
  background-color: var(--warning-color);
}

.settingsCard {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;

  border: solid 2px var(--button-dark);

  width: 200px;
  box-sizing: border-box;
}

.settingsBgCard {
  border-radius: 10px;
  background: var(--social-color);

  height: 250px;
}

.settingsCardCard {
  border-radius: 50px;
  background: var(--social-color);

  height: 40px;
}

.settingsImageIcon {
  font-size: 30px;
}

.settingsColor {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  background: var(--social-color);
  border-radius: 100px;
  border: solid 2px var(--button-dark);

  height: 30px;
  width: 160px;
  box-sizing: border-box;
}

.settingsColorPreview {
  background: var(--social-color);
  border-radius: 100px;
  border: solid 2px var(--button-dark);

  width: 30px;
  height: 30px;
  box-sizing: border-box;
  margin-left: -2px;
}

.settingsColorText {
  background: none;
  border: none;
  resize: none;

  font-family: 'Bahnschrift';
  font-size: 20px;
  color: #5f5d54;
  text-transform: uppercase;

  padding-left: 15px;
}

.settingsSelect {
  background: none;
  border-radius: 100px;
  border: solid 2px var(--button-dark);
  resize: none;

  width: 160px;
  height: 30px;

  padding-left: 3px;

  font-family: 'Bahnschrift';
  font-size: 20px;
  color: #5f5d54;
}

.settingsLeft {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: left;

  gap: 20px;

  margin-bottom: 50px;
}

.settingsMisc {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  width: 300px;
}

.settingsMiscText {
  font-weight: 300;
  font-size: 25px;
}

.settingsStatus {
  position: fixed;
  bottom: 10px;
  right: 10px;

  background: var(--card-color1);
  padding: 10px;
  min-width: 20px;

  border: solid 2px;
  border-radius: 10px;

  text-align: center;
  line-height: 20px;
  font-size: 20px;
}

.settingsStatusGood {
  background-color: var(--bg-color2);
}

.settingsStatusBad {
  background-color: var(--bg-color1);
}

.settingsStatusNeutral {
  background-color: var(--card-color1);
}

.settingsStatusHide {
  visibility: hidden;
}

@media screen and (max-width: 900px) and (min-width: 500px) {
  .settingsH {
    gap: 5px;
  }

  .settingsColor {
    width: 140px;
  }

  .settingsColorText {
    padding-left: 10px;
  }

  .settingsSelect {
    width: 140px;
  }
}

@media screen and (max-width: 500px) {
  .settingsSection {
    width: 90vw;

    padding: 15px;
  }

  .settingsName {
    font-size: 15px;
    margin-bottom: 10px;
  }

  .settingsV {
    gap: 15px;

    margin-bottom: 30px;
  }

  .settingsH {
    flex-direction: column;

    gap: 15px;
  }

  .settingsButton {
    height: 30px;

    line-height: 30px;

    font-size: 15px;
    font-weight: 300;
  }

  .settingsColor {
    border-width: 1.5px;

    height: 20px;
    width: 110px;
  }

  .settingsColorPreview {
    border-width: 1.5px;

    width: 20px;
    height: 20px;
    margin-left: -1.5px;
  }

  .settingsColorText {
    font-size: 15px;

    padding-left: 10px;
  }

  .settingsSelect {
    border-radius: 100px;
    border-width: 1px;

    width: 110px;
    height: 20px;

    padding-left: 3px;

    font-size: 15px;
  }

  .settingsLeft {
    gap: 10px;

    margin-bottom: 30px;
  }

  .settingsMisc {
    width: 220px;
  }

  .settingsMiscText {
    font-weight: 300;
    font-size: 15px;
  }
}

